--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon --ignore \"./data\" server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.3",
+    "follow-redirects": "^1.15.6"
+  }
 }
